# readeck-claude-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-27-readeck-cli.md
docs/superpowers/specs/: 2026-04-27-readeck-cli-design.md
src/readeck_cli/: config.py  main.py  output.py
src/readeck_cli/client/: http.py
src/readeck_cli/commands/: auth.py  bookmarks.py  collections.py  highlights.py  labels.py  profile.py
src/readeck_cli/models/: auth.py  bookmark.py  collection.py  highlight.py  label.py  profile.py
src/readeck_cli/services/: auth.py  bookmarks.py  collections.py  highlights.py  labels.py  profile.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_auth_service.py  test_bookmark_service.py  test_collection_service.py  test_highlight_service.py  test_label_service.py  test_profile_service.py
tests/unit/: test_config.py  test_http_client.py  test_main.py  test_models.py  test_output.py
