[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readeck-cli"
version = "0.1.0"
description = "CLI for Readeck read-it-later service"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "tomli-w>=1.0",
]

[project.scripts]
readeck-cli = "readeck_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "ty>=0.0.1a8",
    "pre-commit>=3",
    "pyupgrade>=3.21.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/readeck_cli"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["readeck_cli"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a real Readeck instance",
]
testpaths = ["tests"]
